some changes in firebase things

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -43,7 +43,8 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
-          {{ user.displayName }}
+          Hi,
+          {{ user.displayName }}!
         </a>
         <div
           ngbDropdownMenu
