--- a/src/app/Admin/admin-products/admin-products.component.html
+++ b/src/app/Admin/admin-products/admin-products.component.html
@@ -1,1 +1,21 @@
-<a routerLink="/admin/products/new" class="btn btn-primary">Add New Product</a>
+<p>
+  <a routerLink="/admin/products/new" class="btn btn-primary"
+    >Add New Product</a
+  >
+</p>
+<table class="table">
+  <thead class="tr">
+    <th>Title</th>
+    <th>Price</th>
+    <th></th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let p of products$ | async">
+      <td>{{ p.title }}</td>
+      <td>{{ p.price }}</td>
+      <td>
+        <a [routerLink]="['/admin/products', p.$key]">Edit </a>
+      </td>
+    </tr>
+  </tbody>
+</table>
