some changes in admin panel

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -68,7 +68,7 @@
         placeholder="Search"
         aria-label="Search"
       />
-      <a> <i class="fas fa-search"></i> </a>
+      <i class="fa fa-search" aria-hidden="true"></i>
     </form>
   </div>
 </nav>
