--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/">Cool Hand Tix</a>
+  <a class="navbar-brand" routerLink="/home">Cool Hand Tix</a>
   <button
     class="navbar-toggler"
     type="button"
